[package]
name = "adamas-node"
version = "3.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
# CORREZIONE FINALE: "tcp", "dns" e "tokio" separati
libp2p = { version = "0.52", features = ["tokio", "tcp", "dns", "noise", "yamux", "gossipsub", "mdns", "macros"] }
futures = "0.3"