[package]
name = "adamas-core"
version = "3.4.0"
edition = "2021"

[[bin]]
name = "adamas-node"
path = "src/main.rs"

[[bin]]
name = "adamas-relay"
path = "src/relay.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
# Feature "relay" per il Client
libp2p = { version = "0.52", features = ["relay", "tokio", "tcp", "dns", "noise", "yamux", "gossipsub", "mdns", "macros", "ping"] }
futures = "0.3"
# Pacchetto specifico per il Server
libp2p-relay = "0.16"